Simple method to load BASIC programs from EEPROM

--- a/src/rom-cartridge/Makefile
+++ b/src/rom-cartridge/Makefile
@@ -3,7 +3,7 @@ VASM = vasm6502_oldstyle
 VASM_OPTS = -quiet -dotdir -Fbin
 PYTHON = python3
 
-all: loader.bin autoboot.bin hello.bin hello2.bin
+all: loader.bin autoboot.bin hello.bin hello2.bin basload.bin moire.bin
 
 loader.bin: loader.s
 	$(VASM) $(VASM_OPTS) -L loader.lst -o loader.bin loader.s
@@ -18,7 +18,14 @@ hello2.bin: hello2.s loader.bin
 	$(VASM) $(VASM_OPTS) -o hello2.tmp hello2.s
 	$(PYTHON) build-rom.py hello2.bin 0300 hello2.tmp loader.bin
 
+basload.bin: basload.s
+	$(VASM) $(VASM_OPTS) -L basload.lst -o basload.bin basload.s
+
+moire.bin: moire.bas basload.bin
+	$(PYTHON) build-basic-rom.py moire.bin moire.bas basload.bin
+
 clean:
 	rm -f loader.bin loader.lst
 	rm -f autoboot.bin autoboot.lst
+	rm -f basload.bin basload.lst
 	rm -f hello.bin hello2.bin hello2.tmp
